--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   swipedetector: ^1.2.0
   vibration: 1.2.2
   flutter_tts: ^0.8.6
+  battery: ^0.3.1+7
+  intl: ^0.16.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,10 +48,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/Calling.jpg
+    - assets/images/comingsoon.jpg
     - assets/images/Home.jpg
     - assets/images/location.jpg
     - assets/images/More.jpg
-    - assets/images/comingsoon.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
