--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ flutter:
     - assets/images/Home.jpg
     - assets/images/location.jpg
     - assets/images/More.jpg
+    - assets/images/blank.jpg
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
