--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_tts: ^0.8.6
   battery: ^0.3.1+7
   intl: ^0.16.1
+  location: ^1.3.4 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
