--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   flutter_tts: ^0.8.6
   battery: ^0.3.1+7
   intl: ^0.16.1
-  location: ^1.3.4 
+  location: ^1.3.4
+  sms_maintained: ^0.2.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -33,6 +34,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.7.3"
+
+flutter_icons:
+  android: "launcher_icon" 
+  ios: true
+  image_path: "assets/icon/thethirdeye.png"
 
 
 # For information on the generic Dart part of this file, see the
@@ -54,6 +61,9 @@ flutter:
     - assets/images/location.jpg
     - assets/images/More.jpg
     - assets/images/blank.jpg
+    - assets/images/battery.jpg
+    - assets/images/date.jpg
+    - assets/images/time.jpg
 
 
 
