--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,8 +68,9 @@ flutter:
     - assets/images/battery.jpg
     - assets/images/date.jpg
     - assets/images/time.jpg
-
-
+    - assets/images/Calling2.jpg
+    - assets/images/callnmsg.jpg
+    - assets/images/message.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
